typescript/checker/tests/conformance/types/tuple/wideningTuples5.ts.stderr
error: ImplicitAny {
    span: Span {
        lo: BytePos(
            85,
        ),
        hi: BytePos(
            86,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples5.ts:2:6
  |
2 | var [a, b] = [undefined, null];
  |      ^

error: ImplicitAny {
    span: Span {
        lo: BytePos(
            88,
        ),
        hi: BytePos(
            89,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples5.ts:2:9
  |
2 | var [a, b] = [undefined, null];
  |         ^

